--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>岛屿数量问题</title>
+    <title>LeetCode 200 - 岛屿数量可视化计算器</title>
   </head>
   <body>
     <div id="root"></div>
